# ocean-imu

./: .gitattributes  .gitignore  .pr2-quarantine  AGENTS.md  CMakeLists.txt  Makefile  README.md  TLDR.md  USEFUL_LINKS.md  WEB_DOWNLOAD_LINKS.md  library.json  library.properties
.github/ou-refactor/: patch.01  patch.02  patch.03  patch.04
.github/workflows/: apply-apparent-wave-direction-patch.yml  apply-current-axis-confidence-patch.yml  apply-iq-direction-tests-patch.yml  apply-ou-shared-core-refactor.yml  apply-physical-wave-phase-sign-patch.yml  apply-wave-direction-article-tail.yml  apply-wave-direction-frame-patch.yml  build.yml  diagnose-ou-common.yml  iss-certificate.yml  pr2-corrected-source-generator.yml  pr2-finalize-safe.yml  pr2-ou3-diagnostic.yml  wave-direction.yml
doc/ahrs/: ahrs-qmekf-charts.tex  autopilots-methods.tex
doc/detrend/: detrend-3d-charts.tex  detrend-charts.tex
doc/freq/: freq-charts-smoothed.tex  freq-charts.tex  freq-tracking_adaptive_notch_kalman.tex  freq-tracking_aranovskiy.tex  freq-tracking_pll.tex  freq-tracking_zero_crossing.tex
doc/imu_calibrate/: imu_calibrate-charts.tex  imu_calibrate-method.tex
doc/kalman_ou_ii/: kalman_ou_ii-charts.tex
doc/kalman_ou_iii/: .iss-proof-note  build.xml  kalman_ou-w3d.tex  kalman_ou_iii-charts.tex  w3d-analytic-coeff.tex-part  w3d-baseline-comparison.tex-part  w3d-baselines.bib  w3d-conclusion-summary.tex-part  w3d-direction-axis-extraction.tex-part  w3d-direction-axis-uncertainty.tex-part  w3d-direction-axis.tex-part  w3d-direction-encounter-equations.tex-part  w3d-direction-encounter.tex-part  w3d-direction-frame-equations.tex-part  w3d-direction-frame.tex-part  w3d-direction-ground-equations.tex-part  w3d-direction-ground-reference.tex-part  w3d-direction-iq-model.tex-part  w3d-direction-methods.tex-part  w3d-direction-sense-output.tex-part  w3d-direction-sense-phase.tex-part  (+15 more)
plots/: plot_sampling.py
src/: ArduinoOceanImu.h
tools/: apply_apparent_wave_direction_patch.py  apply_current_axis_confidence_patch.py  apply_iq_direction_tests_patch.py  apply_physical_wave_phase_sign_patch.py  apply_wave_direction_frame_patch.py  ou_tuning_sweep.py  replace_wave_direction_article_tail.py
(+176 files in other folders)
